# rustq

./: .formatter.exs  .gitignore  .reach.exs  AGENTS.md  CHANGELOG.md  DEFRUST_PLAN.md  README.md  ROADMAP.md  SKILL.md  mix.exs  rustq.exs
.github/workflows/: ci.yml
guides/: compatibility.md  designing-generators.md  generating-rust.md  reach-plugin.md  rustler-generation.md  using-rustq-well.md  zero-rust-nifs.md
integration/public_consumer/: README.md  mix.exs  rustq.exs
integration/zero_rust_consumer/: README.md  mix.exs
lib/: rustq.ex
lib/rustq/: atom.ex  cargo.ex  clippy.ex  codegen.ex  config.ex  corpus.ex  diagnostic.ex  error.ex  generated.ex  meta.ex  native.ex  native_codegen.ex  native_descriptor.ex  native_enum_descriptor.ex  native_ref.ex  reach.ex  rust.ex  rustler.ex  sigil.ex  spec.ex  specs.ex  splice.ex  splice_group.ex  syn.ex  template.ex  test.ex  type.ex
native/rustq_nif/: Cargo.toml
native/rustq_nif/src/: decode.rs  generated_ast.rs  lib.rs  parse.rs  parse_item.rs  parse_type.rs  syn_metadata.rs  template.rs
test/: test_helper.exs
test/fixtures/: data_new_copy.rs  decoder_metadata.rs  external_callables.rs  external_methods.rs  external_statics.rs  function_pointer_field.rs  impl_as_ref.rs  into_option_method.rs  method_arg_propagation.rs  method_chain_borrow.rs  nif_impls.rs  nif_more_impls.rs  option_ref_method.rs  raw_receiver_methods.rs  slice_list_literal.rs
test/rustq/: architecture_test.exs  ast_builder_test.exs  ast_schema_test.exs  cargo_test.exs  error_test.exs  file_test.exs  generated_test.exs  meta_test.exs  (+22 more)
(+271 files in other folders)
