[package]
name = "rustq_nif"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "rustq_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
prettyplease = "0.2"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
